# erebus-engine

./: .gitignore  CMakeLists.txt  DaemonLicense-en.md  DaemonLicense-pt.md  LICENSE  README.md
docs/: erebus-engine_PRD.md
src/: main.cpp
src/adapters/: event_bus_impl.cpp  event_bus_impl.h
src/domain/: capacity_result.hpp  combat_skill.h  dice.cpp  dice.h
src/events/: dice_events.h
src/handlers/: capacity_handler.cpp  capacity_handler.hpp  combat_skill_handler.cpp  combat_skill_handler.h  dice_handler.cpp  dice_handler.h
src/ports/: i_capacity_calculator.hpp  i_combat_skill_validator.h  i_dice_roller.h  i_event_bus.h
src/services/: capacity_service.cpp  capacity_service.hpp  dice_service.cpp  dice_service.h
tests/integration/: CMakeLists.txt  smoke_test.cpp
tests/unit/: CMakeLists.txt  capacity_handler_test.cpp  combat_skill_handler_test.cpp  dice_test.cpp  smoke_test.cpp
